--- a/styles.css
+++ b/styles.css
@@ -241,17 +241,28 @@ body {
   border-top: solid;
   border-radius: 1rem 1rem 4px 4px ; 
 }
-#body::before{
-  content: '';
+#headlight{
   position: absolute;
-  position: inherit;
   height: 1rem;
   width: 1rem;
   top: 2.2rem;
-  left: 9rem;
-  background-color: rgb(216, 206, 206);
+  left: 11rem;
+  background: rgba(255, 255, 255, 1);
   border-radius: 2rem 10rem 0 10rem;
-  z-index: 2;
+  animation: headlight 40s linear infinite;
+}
+#headlight::after{
+  content: '';
+  height: 0.55rem;
+  width: 0;
+  position: absolute;
+  left: 0.1rem; 
+  top: -0.5rem;
+  border-top: 0.6rem solid transparent;
+  border-right: 8rem solid transparent;
+  border-bottom: 2.5rem solid transparent;
+  z-index: -2;
+  animation: focus 40s linear infinite;
 }
 #wheel{
   position: absolute;
@@ -598,13 +609,49 @@ body {
 }
 @keyframes motion-car {
   0%{
-    transform: translateX(-15rem);
+    transform: translateX(-25rem);
   }
   100%{
     transform: translateX(82rem);
   }
 }
-
+@keyframes headlight{
+  0%{
+  }
+  45%{
+    background-color: rgba(255, 255, 255, 1);
+    opacity: 1;
+  }
+  50%{
+    background-color: rgba(255, 255, 180, 10) ;
+  }
+  95%{
+    background-color: rgba(255, 255, 180, 10) ;
+  }
+  100%{
+    background-color: rgba(255, 255, 255, 1);
+    opacity: 1;
+  }
+}
+@keyframes focus{
+  0%{
+    opacity: 1;
+  }
+  45%{
+    border-right-color: transparent;
+    opacity: 1;
+  }
+  50%{
+    border-right-color: rgba(255, 255, 180, 0.7) ;
+  }
+  95%{
+    border-right-color: rgba(255, 255, 180, 0.7) ;
+  }
+  100%{
+    border-right-color: transparent;
+    opacity: 1;
+  }
+}
 @keyframes spin {
   from {
     transform: rotate(0deg);
@@ -1133,4 +1180,5 @@ body {
     opacity: 0.5;
   }
 }
+
 
