--- a/styles.css
+++ b/styles.css
@@ -250,6 +250,7 @@ body {
   background: rgba(255, 255, 255, 1);
   border-radius: 2rem 10rem 0 10rem;
   animation: headlight 40s linear infinite;
+  z-index: 10;
 }
 #headlight::after{
   content: '';
@@ -1180,5 +1181,6 @@ body {
     opacity: 0.5;
   }
 }
+
 
 
