--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,102 @@ body {
   background: linear-gradient(to top, #0d1b2a, #1b263b, #415a77);
   animation-name: Night;
 }
+#star1,#star1::before,#star1::after,
+#star2,#star2::before,#star2::after,
+#star3,#star3::before,#star3::after,
+#star4,#star4::before,#star4::after,
+#star5,#star5::before,#star5::after,
+#star6,#star6::before,#star6::after,
+#star7,#star7::before,#star7::after{
+  height: 3px;
+  width: 3px;
+  border-radius: 50%;
+  position: absolute;
+  content: '';
+  animation: star 40s linear infinite;
+}
+#star1{
+  top: 3rem;
+  left: 4rem;
+}
+#star2{
+  top: 1rem;
+  left: 15rem;
+}
+#star3{
+  top: 3rem;
+  left: 30rem;
+}
+#star4{
+  top: 4rem;
+  left: 40rem;
+}
+#star5{
+  top: 1rem;
+  left: 50rem;
+}
+#star6{
+  top: 4rem;
+  left: 55rem;
+}
+#star7{
+  top: 2rem;
+  left: 70rem;
+}
+#star1::before{
+  top: 10rem;
+  left:4rem;
+}
+#star1::after{
+  top: 5rem;
+  left: -3rem;
+}
+#star2::before{
+  top: 5rem;
+  left:4rem;
+}
+#star2::after{
+  top: 7rem;
+  left: -4rem;
+}
+#star3::before{
+  top: 3rem;
+  left:-3rem;
+}
+#star3::after{
+  top: 7rem;
+  left: -6rem;
+}
+#star4::before{
+  top: 3rem;
+  left:-7rem;
+}
+#star4::after{
+  top: 8rem;
+  left: 1rem;
+}
+#star5::before{
+  top: 4rem;
+  left: -4rem;
+}
+#star5::after{
+  top: 15rem;
+}
+#star6::before{
+  top: 1rem;
+  left: 10rem;
+}
+#star6::after{
+  top: 8rem;
+}
+#star7::before{
+  top: 8rem;
+  left: -5rem;
+}
+#star7::after{
+  top: 8rem;
+  left: 5rem;
+}
 
 #grass {
   height: 100%;
@@ -204,7 +300,6 @@ body {
   width: 0.8em;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.8);
-
   left: 25rem;
   animation: bulb  40s linear infinite;
   
@@ -608,6 +703,7 @@ body {
 .blade3 {
   left: 39.1rem;
 }
+
 @keyframes motion-car {
   0%{
     transform: translateX(-25rem);
@@ -632,6 +728,18 @@ body {
   100%{
     background-color: rgba(255, 255, 255, 1);
     opacity: 1;
+  }
+}
+@keyframes star{
+  0%{
+  }
+  50%{
+    background-color: white;
+  }
+  95%{
+    background-color: white;
+  }
+  100%{
   }
 }
 @keyframes focus{
@@ -662,7 +770,6 @@ body {
     transform: rotate(360deg);
   }
 }
-
 @keyframes smoke {
   0% {
     transform: translate(0, 0);
@@ -678,7 +785,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes body {
   0% {
     background-color: #fceabb;
@@ -700,7 +806,6 @@ body {
     background-color: #fceabb;
   }
 }
-
 @keyframes bulb {
   0% {
     box-shadow: none;
@@ -726,7 +831,6 @@ body {
     box-shadow: none;
   }
 }
-
 @keyframes sun {
   0% {
     transform: translate(0, -2rem);
@@ -758,7 +862,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes moon {
   0% {
     transform: translate(0, 0);
@@ -785,7 +888,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes cloud {
   0% {
     transform: translateX(1rem);
@@ -795,7 +897,6 @@ body {
     transform: translateX(100rem);
   }
 }
-
 @keyframes cloud34 {
   0% {
     transform: translateX(90rem);
@@ -805,7 +906,6 @@ body {
     transform: translateX(1rem);
   }
 }
-
 @keyframes Morning {
   0% {
     opacity: 0.2;
@@ -827,7 +927,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes Day {
   0% {
     opacity: 0;
@@ -853,7 +952,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes Sunset {
   0% {
     opacity: 0;
@@ -875,7 +973,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes Night {
   0% {
     opacity: 0;
@@ -897,7 +994,6 @@ body {
     opacity: 0.5;
   }
 }
-
 @media screen and (max-width: 1024px) {  
   .lamp {
     transform: scale(0.8);
@@ -930,7 +1026,6 @@ body {
     display: none;
   }
 }
-
 @media screen and (max-width: 425px) {  
   .container{
     width: 25rem;
@@ -1011,7 +1106,6 @@ body {
     box-shadow: none;
   }
 }
-
 @keyframes motion-sun {
   0% {
     transform: translate(0, -5rem);
@@ -1043,7 +1137,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes motion-moon {
   0% {
     transform: translate(0, 0);
@@ -1070,7 +1163,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes motion-cloud {
   0% {
     transform: translateX(1rem);
@@ -1080,7 +1172,6 @@ body {
     transform: translateX(30rem);
   }
 }
-
 @keyframes motion-cloud34 {
   0% {
     transform: translateX(30rem);
@@ -1111,7 +1202,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes motion-Day {
   0% {
     opacity: 0;
@@ -1137,7 +1227,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes motion-Sunset {
   0% {
     opacity: 0;
@@ -1159,7 +1248,6 @@ body {
     opacity: 0;
   }
 }
-
 @keyframes motion-Night {
   0% {
     opacity: 0;
@@ -1181,6 +1269,7 @@ body {
     opacity: 0.5;
   }
 }
+
 
 
 
